--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   google_fonts: ^6.1.0
   simple_animations: 5.1.0
   video_player: ^2.7.0
-  camera: ^0.9.4+4
+  camera: ^0.11.1
   dotted_border: ^2.0.0+3
-  intl: ^0.18.0
+  intl: ^0.20.2
+  file_picker: 10.1.2
 
 dev_dependencies:
   flutter_test:
