--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   dotted_border: ^2.0.0+3
   intl: ^0.20.2
   file_picker: 10.1.2
+  percent_indicator: ^4.2.2
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
