--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,14 @@ dependencies:
   percent_indicator: ^4.2.2
   curved_navigation_bar: ^1.0.6
   csv: ^5.0.2
+  permission_handler: ^11.3.0
+  google_mlkit_commons: ^0.11.0
+  google_mlkit_pose_detection: ^0.14.0
+  path_provider: ^2.1.2   # For file handling
+  path: ^1.8.3           # For path manipulation
+  video_thumbnail: ^0.5.3
+  image: ^4.1.7
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
